--- a/public/css/app.css
+++ b/public/css/app.css
@@ -268,6 +268,10 @@ p {
   color: #272A38;
 }
 
+.card {
+  background-color: transparent !important;
+}
+
 .table {
   background-color: transparent !important;
 }
