--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,7 +3,9 @@
 // Variables
 @import "variables";
 // Generic
-
+.card{
+  background-color: transparent !important;
+}
 .table{
   background-color: transparent !important;
   //thead,tbody,tr
