--- a/public/css/app.css
+++ b/public/css/app.css
@@ -121,6 +121,10 @@
   background-color: #2B303B;
 }
 
+.bg-transparent {
+  background-color: transparent !important;
+}
+
 .bg-gray {
   background-color: #a1a8a7;
 }
@@ -266,10 +270,6 @@ p {
   font-family: Open Sans, Libre Franklin, Helvetica, sans-serif;
   font-size: 1em;
   color: #272A38;
-}
-
-.card {
-  background-color: transparent !important;
 }
 
 .table {
