--- a/public/resources/assets/sass/app.css
+++ b/public/resources/assets/sass/app.css
@@ -25,6 +25,34 @@
   src: url("/fonts/DIMITRI.TTF");
 }
 
+@font-face {
+  font-family: 'Gilroy';
+  src: url("/fonts/Gilroy-Bold.otf");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url("/fonts/Gilroy-BoldItalic.otf");
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url("/fonts/Gilroy-Black.otf");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url("/fonts/Gilroy-BlackItalic.otf");
+  font-weight: 900;
+  font-style: italic;
+}
+
 .white-border {
   border-color: #FFF !important;
 }
@@ -255,11 +283,11 @@ h1,
 h2,
 h3,
 h5 {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
 }
 
 p {
-  font-family: Open Sans, Libre Franklin, Helvetica, sans-serif;
+  font-family: Muli, Helvetica, sans-serif;
   font-size: 1em;
   color: #272A38;
 }
@@ -340,7 +368,7 @@ form .list-group-item {
 }
 
 #preHeader a {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
   font-size: .7rem;
 }
 
@@ -350,7 +378,7 @@ form .list-group-item {
 }
 
 #Header h6 {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
 }
 
 #Header span.logo {
@@ -452,7 +480,7 @@ span.light h6 {
   color: white;
   font-size: 35px;
   font-weight: bold;
-  font-family: Open Sans, Libre Franklin, Helvetica, sans-serif;
+  font-family: Muli, Helvetica, sans-serif;
 }
 
 .main-banner .left span.first::before {
@@ -509,7 +537,7 @@ span.light h6 {
 }
 
 .tournament-overview-container span {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
 }
 
 .dagameleague-small {
@@ -524,12 +552,12 @@ span.light h6 {
 }
 
 .font-primary {
-  font-family: "Montserrat", Helvetica, serif !important;
+  font-family: Gilroy, Helvetica, serif !important;
   font-weight: normal;
 }
 
 .font-copy {
-  font-family: Open Sans, Libre Franklin, Helvetica, sans-serif;
+  font-family: Muli, Helvetica, sans-serif;
   text-transform: none;
 }
 
@@ -609,7 +637,7 @@ span.light h6 {
 
 .carousel-item .slide-text {
   color: #4D6CAB;
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
   text-transform: none;
   font-weight: normal;
 }
@@ -624,6 +652,7 @@ span.light h6 {
 
 .carousel-text-header {
   font-size: 3em;
+  font-weight: 900 !important;
 }
 
 .carousel-control-prev,
@@ -656,13 +685,13 @@ span.light h6 {
 }
 
 body {
-  font-family: Open Sans, Libre Franklin, Helvetica, sans-serif;
+  font-family: Muli, Helvetica, sans-serif;
   background-color: #282840;
   font-size: 16px;
 }
 
 body .tag {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
   font-weight: 700;
   padding: 0px 2px;
 }
@@ -763,7 +792,7 @@ body .list-group-tournament-match .list-group-item.waiting {
 }
 
 body .table th {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
   text-transform: uppercase;
 }
 
@@ -799,7 +828,7 @@ body .pagination li {
 
 body .pagination li span,
 body .pagination li a {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
   font-size: 12px;
   display: block;
   margin: auto;
@@ -877,7 +906,7 @@ body #alertBannerTop {
 
 body #moreButton {
   margin-top: 5px;
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
   color: #FDFEFD;
   font-size: 1.4em;
   font-weight: 700;
@@ -1038,7 +1067,7 @@ body .btn-dgl {
   border-width: 0;
   -webkit-transform: skewX(10deg);
           transform: skewX(10deg);
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
   font-weight: bold;
 }
 
@@ -1090,7 +1119,7 @@ body .navbar {
 }
 
 body .navbar .dropdown-item {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
   font-size: .7em;
 }
 
@@ -1122,7 +1151,7 @@ body .navbar .nav-item.lined.last {
 }
 
 body .nav-brand a {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
   font-weight: 900;
   vertical-align: baseline;
 }
@@ -1187,12 +1216,12 @@ body .navbar-dgl .navbar-toggler-icon {
 }
 
 body .navbar-dgl .navbar-text {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
 }
 
 body .navbar-dgl a {
   color: #FFF;
-  font-family: Open Sans, Libre Franklin, Helvetica, sans-serif;
+  font-family: Muli, Helvetica, sans-serif;
   text-transform: uppercase;
   text-decoration: none;
   padding-left: 13px;
@@ -1200,7 +1229,7 @@ body .navbar-dgl a {
 }
 
 body .navbar-dgl a.nav-link {
-  font-family: "Montserrat", Helvetica, serif, Open Sans, Libre Franklin, Helvetica, sans-serif;
+  font-family: Gilroy, Helvetica, serif, Muli, Helvetica, sans-serif;
   font-size: .7em;
 }
 
@@ -1243,8 +1272,8 @@ body .banner-row .banner-row-background {
 }
 
 body .banner-row h1 {
-  font-family: "Montserrat", Helvetica, serif;
-  font-weight: 700;
+  font-family: Gilroy, Helvetica, serif;
+  font-weight: 900;
   font-size: 3rem;
   z-index: 2;
   position: absolute;
@@ -1252,7 +1281,6 @@ body .banner-row h1 {
   left: 10%;
   text-transform: uppercase;
   color: #FFF;
-  text-shadow: -3px 0 #474d55, 0 3px #474d55, 3px 0 #474d55, 0 -3px #474d55;
 }
 
 body .banner-row .banner-icon {
@@ -1371,17 +1399,17 @@ body .post-body-hover:hover .post-title {
 }
 
 body .footer {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
 }
 
 body .footer h5 {
-  font-family: "FuturaMedium", "Montserrat", Helvetica, serif;
+  font-family: "FuturaMedium", Gilroy, Helvetica, serif;
   font-size: 1rem;
 }
 
 body .footer a {
   color: #a1a8a7;
-  font-family: Open Sans, Libre Franklin, Helvetica, sans-serif;
+  font-family: Muli, Helvetica, sans-serif;
   text-decoration: none;
 }
 
@@ -1395,7 +1423,7 @@ body .footer h6 {
 }
 
 body .footer-text span {
-  font-family: "Montserrat", Helvetica, serif;
+  font-family: Gilroy, Helvetica, serif;
   font-size: .8em;
 }
 
