--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -377,13 +377,13 @@ span.light{
   //text-align: start;
   //position: relative;
   //bottom: 45vh;
-  margin-bottom: 20vh;
+  //margin-bottom: 20vh;
   h1{
     font-weight: bolder;
   }
 }
 .carousel-text-header{
-  font-size: 3em;
+  //font-size: 3em;
   font-weight: 900 !important;
   //text-align: start;
 }
