CSS changes for tournament logo fade.

--- a/public/resources/assets/sass/app.css
+++ b/public/resources/assets/sass/app.css
@@ -61,6 +61,18 @@
   border-color: #CECEEB !important;
 }
 
+.mt-7 {
+  margin-top: 5.5em;
+}
+
+.mt-8 {
+  margin-top: 6em;
+}
+
+.mt-9 {
+  margin-top: 6.5em;
+}
+
 .mt-10 {
   margin-top: 7em;
 }
