--- a/public/css/app.css
+++ b/public/css/app.css
@@ -69,6 +69,18 @@
   border-color: #CECEEB !important;
 }
 
+.mt-7 {
+  margin-top: 5.5em;
+}
+
+.mt-8 {
+  margin-top: 6em;
+}
+
+.mt-9 {
+  margin-top: 6.5em;
+}
+
 .mt-10 {
   margin-top: 7em;
 }
