--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -70,6 +70,15 @@
 }
 
 //Margins and Paddings
+.mt-7{
+  margin-top : 5.5em;
+}
+.mt-8{
+  margin-top : 6em;
+}
+.mt-9{
+  margin-top : 6.5em;
+}
 .mt-10{
   margin-top : 7em;
 }
