--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1349,7 +1349,10 @@ body .card-body.card-title {
 }
 
 body .dgl-card-img {
-  width: 50%;
+  min-width: 50%;
+  max-width: 90%;
+  height: auto;
+  max-height: 200px;
   display: block;
   margin: 2em auto 0 auto;
 }
