--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -159,7 +159,7 @@ span{
     text-transform: none !important;
   }
   li{
-    color: $dgl-blue;
+    color: #6677CC;
   }
 
   p{
@@ -773,15 +773,15 @@ body{
   }
 
   .btn-dgl-container-primary{
-    border: 3px solid $dgl-orange;
+    border: 3px solid $dgl-green;
     .btn-dgl{
-      color: $dgl-primary !important;
+      color: #FFF !important;
     }
     &:hover{
-      border: 3px solid $dgl-primary;
-      background-color: $dgl-orange;
+      border: 3px solid $dgl-green2;
+      background-color: $dgl-green;
       .btn-dgl{
-        //color: $dgl-purple !important;
+        color: $dgl-green5 !important;
       }
     }
   }
@@ -839,7 +839,7 @@ body{
     }
 
     a.active{
-      color: $dgl-primary;
+      color: $dgl-green;
     }
   }
   .navbar{ // bootstrap override
