--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -225,7 +225,7 @@ $dgl-dark: #272A38;
 }
 
 .back-color-purple{
-  background-color: $dgl-purple;
+  background-color: #6677cc;
 }
 
 .back-color-darkgray{
