--- a/public/resources/assets/sass/app.css
+++ b/public/resources/assets/sass/app.css
@@ -460,7 +460,7 @@ span h6 {
 }
 
 span li {
-  color: #6677CC;
+  color: #21A560;
 }
 
 span p {
@@ -490,6 +490,10 @@ span.light h4,
 span.light h5,
 span.light h6 {
   color: #EE2C54;
+}
+
+span.light li {
+  color: #43609C;
 }
 
 .main-banner {
