--- a/public/css/app.css
+++ b/public/css/app.css
@@ -468,7 +468,7 @@ span h6 {
 }
 
 span li {
-  color: #21A560;
+  color: #91a5cd;
 }
 
 span p {
@@ -487,6 +487,17 @@ span th {
   background-color: #ff7324;
 }
 
+span img.team-logo-small {
+  display: inline;
+  margin: auto;
+}
+
+span img {
+  display: block;
+  max-width: 33%;
+  margin: 1em auto;
+}
+
 span.light p {
   color: #000;
 }
@@ -501,7 +512,7 @@ span.light h6 {
 }
 
 span.light li {
-  color: #43609C;
+  color: #000;
 }
 
 .main-banner {
@@ -728,6 +739,7 @@ body {
   font-family: Muli, Helvetica, sans-serif;
   background-color: #282840;
   font-size: 16px;
+  font-weight: 600;
 }
 
 body .tag {
