Somee Match Css changes and record ordering

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -245,7 +245,7 @@ $dgl-dark: #272A38;
   background-color: $dgl-gray3;
 }
 .bg-gray4{
-  background-color: $dgl-gray;
+  background-color: $dgl-gray4;
 }
 .bg-gray5{
   background-color: $dgl-gray5;
